* Fixed layout issue for poor peoples screens

--- a/muikku-core-plugins/src/main/resources/META-INF/resources/scripts/src/containers/index.css
+++ b/muikku-core-plugins/src/main/resources/META-INF/resources/scripts/src/containers/index.css
@@ -3,7 +3,7 @@
 /* stylelint-disable */
 
 body {
-  align-items: center;
+  align-items: flex-start;
   background-color: #000000;
   background-image: url("bg.jpg");
   background-position: center center;
